# grantlee

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  COPYING.LIB  GOALS  Mainpage.dox  README  README.md  appveyor.yml
examples/books/: CMakeLists.txt  bookdelegate.cpp  bookdelegate.h  bookwindow.cpp  bookwindow.h  bookwindow.ui  bookwrapper.cpp  bookwrapper.h  initdb.h  main.cpp
examples/codegen/: CMakeLists.txt  codegen.qrc  codegentableview.cpp  codegentableview.h  comboboxdelegate.cpp  comboboxdelegate.h  comboboxdelegate_p.h  custom_tags.qrc  designwidget.cpp  designwidget.h  designwidget.ui  grantlee_paths.h.cmake  main.cpp  mainwindow.cpp  mainwindow.h  methodmodel.cpp  methodmodel.h  propertytablewidget.cpp  propertytablewidget.h
examples/contacts/: CMakeLists.txt  contact.cpp  contact.h  contacts.pot  de_DE.po  de_DE.ts  fr_FR.po  fr_FR.ts  grantlee_paths.h.cmake  kdelocalizer.cpp  kdelocalizer.h  main_kde.cpp  main_linguist.cpp  mainwindow.cpp  mainwindow.h
examples/dbus-chat/: CMakeLists.txt  chat.cpp  chat.h  chatitem.cpp  chatitem.h  chatmainwindow.ui  grantlee_paths.h.cmake
examples/grue/: CMakeLists.txt  commandfactory.h  commandparser.cpp  commandparser.h  commandprocessor.cpp  commandprocessor.h  commandtokenizer.cpp  commandtokenizer.h  main.cpp  mainwindow.cpp  mainwindow.h  script.h
examples/htmlapps/: CMakeLists.txt  customplugin.cpp  customplugin.h  grantlee_paths.h.cmake  localrequestmanager.cpp  localrequestmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  rssfeed.cpp  rssfeed.h  templatereply.cpp  templatereply.h
examples/textedit/: CMakeLists.txt  audioobject.cpp  audioobject.h  audiotextdocumentoutputter.cpp  audiotextdocumentoutputter.h  audiotextedit.cpp  example.html  (+9 more)
grantlee_core/: CMakeLists.txt  context.cpp  context.h  engine.cpp  engine.h  engine_p.h  exception.h  filter.h  filterexpression.cpp  filterexpression.h  grantlee_core.h  grantlee_core_export.h  grantlee_tags_p.h  lexer.cpp  mutabletemplate.cpp  mutabletemplate.h  node.cpp  node.h  outputstream.cpp  outputstream.h  parser.cpp  parser.h  pluginpointer_p.h  safestring.cpp  safestring.h  taglibraryinterface.h  template.cpp  template.h  template_p.h  templateloader.cpp  templateloader.h  util.cpp  util_p.h  variable.cpp
grantlee_core_library/: CMakeLists.txt  context.cpp  context.h  engine.cpp  engine.h  engine_p.h  enginestate.cpp  enginestate.h  enginestate_p.cpp  enginestate_p.h  exception.h  filter.cpp  filter.h  filterexpression.cpp  filterexpression.h  global.h  grantlee.h  grantlee_export.h  grantlee_tags_p.h  grantlee_version.h.cmake  lexer.cpp  lexer.h  lexer_p.h  mutabletemplate.cpp  mutabletemplate.h  node.cpp  node.h  parser.cpp  parser.h  safestring.cpp  safestring.h  template.cpp  template.h  template_p.h  templateloader.cpp  templateloader.h  text_util.h  token.h  util.cpp  util_p.h  (+2 more)
grantlee_defaultfilters/: CMakeLists.txt  cut.cpp  cut.h  datetime.cpp  datetime.h  default_if_none.cpp  default_if_none.h  defaultfilters.cpp  defaultfilters.h  integers.cpp  integers.h  join.cpp  join.h  lists.cpp  lists.h  logic.cpp  logic.h  lower.cpp  lower.h  misc.cpp  misc.h  removetags.cpp  removetags.h  safe.cpp  safe.h  slice.cpp  slice.h  strings.cpp  strings.h  truncatewords.cpp  truncatewords.h  upper.cpp  upper.h  yesno.cpp  yesno.h
grantlee_defaulttags/: CMakeLists.txt  autoescape.cpp  autoescape.h  comment.cpp  comment.h  cycle.cpp  cycle.h  debug.cpp  debug.h  defaulttags.cpp  defaulttags.h  filtertag.cpp  filtertag.h  firstof.cpp  firstof.h  for.cpp  for.h  if.cpp  if.h  ifchanged.cpp  ifchanged.h  ifequal.cpp  ifequal.h  load.cpp  load.h  mediafinder.cpp  mediafinder.h  now.cpp  now.h  range.cpp  range.h  regroup.cpp  regroup.h  spaceless.cpp  spaceless.h  ssi.cpp  ssi.h  templatetag.cpp  templatetag.h  widthratio.cpp  (+3 more)
grantlee_loadertags/: CMakeLists.txt  block.cpp  block.h  extends.cpp  extends.h  include.cpp  include.h  loadertags.cpp  loadertags.h
grantlee_mutabletags/: CMakeLists.txt  mutabletags.cpp  mutabletags.h  raw.cpp  raw.h  repeater.cpp  repeater.h
grantlee_scriptabletags/: CMakeLists.txt  scriptablecontext.cpp  scriptablecontext.h  scriptablefilter.cpp  scriptablefilter.h  scriptablefilterexpression.cpp  scriptablefilterexpression.h  scriptablenode.cpp  scriptablenode.h  scriptableparser.cpp  scriptableparser.h  scriptablesafestring.cpp  scriptablesafestring.h  scriptabletags.cpp  scriptabletags.h  scriptabletemplate.cpp  scriptabletemplate.h  scriptablevariable.cpp  scriptablevariable.h  scripteddefaults.qs
gui/: CMakeLists.txt  abstractmarkupbuilder.h  bbcodebuilder.cpp  bbcodebuilder.h  kabstractmarkupbuilder.h  kmarkupdirector.cpp  kmarkupdirector.h  kmarkupdirector_p.cpp  kmarkupdirector_p.h  kplaintextmarkupbuilder.cpp  kplaintextmarkupbuilder.h  ktexthtmlbuilder.cpp  ktexthtmlbuilder.h  markupdirector.cpp  markupdirector.h  markupdirector_p.cpp  markupdirector_p.h  mediawikimarkupbuilder.cpp  mediawikimarkupbuilder.h  plaintextmarkupbuilder.cpp  plaintextmarkupbuilder.h  texthtmlbuilder.cpp  texthtmlbuilder.h
loadertags/: CMakeLists.txt  block.cpp  block.h  blockcontext.cpp  blockcontext.h  extends.cpp  extends.h  include.cpp  include.h  loadertags.cpp  loadertags.h
scriptabletags/: CMakeLists.txt  scriptablecontext.cpp  scriptablecontext.h  scriptablefilter.cpp  scriptablefilter.h  scriptablefilterexpression.cpp  scriptablefilterexpression.h  scriptablenode.cpp  scriptablenode.h  scriptableparser.cpp  scriptableparser.h  scriptablesafestring.cpp  scriptablesafestring.h  scriptabletags.cpp  scriptabletags.h  scriptabletemplate.cpp  scriptabletemplate.h  scriptablevariable.cpp  scriptablevariable.h
templates/: CMakeLists.txt
tests/: CMakeLists.txt  benchmarks.cpp  htmlbuildertest.cpp  operatorcasttests.cpp  plainmarkupbuildertest.cpp  richtest.html  scripteddefaults.qs  scriptedtags.qrc  test_macros.h  testbuiltins.cpp  testdefaulttags.cpp  testfilters.cpp  testgenericcontainers.cpp  testgenerictypes.cpp  testloadertags.cpp  testmutabletags.cpp  testsafestring.cpp  testscriptabletags.cpp  testtags.qs
(+476 files in other folders)
